Make it compilable and running using msys64 under Windows.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(Path_Planning)
 cmake_minimum_required (VERSION 3.5)
 
 add_definitions(-std=c++11)
+add_definitions(-D_USE_MATH_DEFINES)
 
 set(CXX_FLAGS "-Wall")
 set(CMAKE_CXX_FLAGS, "${CXX_FLAGS}")
@@ -18,9 +19,15 @@ link_directories(/usr/local/lib)
 link_directories(/usr/local/opt/openssl/lib)
 link_directories(/usr/local/Cellar/libuv/1.11.0/lib)
 
-endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
+endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 
 
 add_executable(path_planning ${sources})
 
 target_link_libraries(path_planning z ssl uv uWS)
+
+if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
+
+target_link_libraries(path_planning ws2_32)
+
+endif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
